Fix Pre-Release 0 Hosting Path

--- a/old/pre-release-0/index.html
+++ b/old/pre-release-0/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <script type="module">
-    import init from "/skipngo.js";
+    import init from "/skipngo_pre-releases/old/pre-release-0/skipngo.js";
     init();
   </script>
 </html>
